// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative  files/proto/note.proto  
syntax = "proto3";
package proto;
option go_package = "grpc-unary-stream/files/pb";

service NoteService {
    rpc FindLimit(LimitRequest) returns (stream NoteResponse) {}
    rpc FindById(stream SingleRequest) returns (stream NoteResponse) {}
}

message EmptyRequest {
}

message LimitRequest {
    int64 limit = 1;
}

message SingleRequest {
    int64 id = 1;
}

message NoteResponse {
    int64 id = 1;
    string title = 2;
    string description = 3;
}

